# yk-ai

./: .gitignore  Dockerfile  docker-compose.yml  document_loader.py  langgraph.json  llm.py  main.py  multi_models.py  network.py  pyproject.toml  rag.py  test_script.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
app/: config.py  main.py  schema.py  system_prompt.md  utils.py
app/ai/: base.py  gemini.py  openai_connector.py  prompt_template.py  streamlit.py  travel_guide.py
app/ai/basics/: travel_guide.py
app/ai/chains/: lcel_demo.py  sequencial_chain.py  simple_sequencial_chain.py
app/ai/chat_history/: chat_prompt_template_demo.py
app/ai/kode_k/: 01_interacting_with_llms.py  01_interacting_with_llms_output_json.py  01_interacting_with_llms_output_python_class.py
app/ai/kode_k/01_model_IO/: 01_interacting_with_llms_output_json.py  01_interacting_with_llms_output_python_class.py
app/ai/lab/: assigment_1.py  assignment_2.py  assignment_3.py
app/ai/v1/: llm_connector.py
app/ai/v1/basics/: streamlit.py
app/ai/v1/chains/: multiple_llms.py  (+1 more)
app/api/routes/: ai.py
chroma_DB/: chroma.sqlite3
chroma_DB/a5c47302-af12-4864-ba5b-53c76fe40537/: index_metadata.pickle
documents/: doc1.docx  doc3.docx
langchain/: 00_lab.py  01_agnent.py  02_tools.py  03_short_memory.py  04_multi_model.py  langgraph.json  main.py
lc/: 00_agent.py  00_model.py  01_agent.py  03_tools.py  04_short_memory.py  05_multimodel.py  06_mcp.py  langgraph.json  utils.py
updated_langchain/: 1-langchain-intro.ipynb  2-model-integration.ipynb  3-streaming-batch.ipynb  4-tools.ipynb  5-messages.ipynb  6-structured-output.ipynb  7-middleware.ipynb  8-human-in-the-middle.ipynb
(+5 files in other folders)
