[project]
name = "yk-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "fastapi[all]>=0.129.0",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.9",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.8",
    "langgraph-cli[inmem]>=0.4.12",
    "langsmith>=0.7.3",
    "netmiko>=4.6.0",
    "openai>=2.21.0",
    "pypdf>=6.7.1",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "tavily>=1.1.0",
]
