[project]
name = "yk-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langsmith>=0.7.4",
    "openai>=2.21.0",
    "pydotenv>=0.0.7",
    "pypdf>=6.7.1",
    "streamlit>=1.54.0",
]
