[project]
name = "yk-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "fastapi[all]>=0.129.0",
    "googleapis-common-protos>=1.72.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.10",
    "langsmith>=0.7.4",
    "netmiko>=4.6.0",
    "openai>=2.21.0",
    "pydotenv>=0.0.7",
    "pypdf>=6.7.1",
    "scalar-fastapi>=1.6.2",
    "streamlit>=1.54.0",
    "tavily>=1.1.0",
]
